Add the possibility of changing the font weight of headings

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -61,6 +61,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "600",
+      "font_weight_h2": "700",
+      "font_weight_h3": "700",
+      "font_weight_headers": "600",
       "h1_size": 101,
       "h2_size": 64,
       "h3_size": 40,
@@ -231,6 +235,10 @@
         }
       },
       "corner_radius": "rounded",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -401,6 +409,10 @@
         }
       },
       "corner_radius": "square",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -572,6 +584,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 101,
       "h2_size": 64,
       "h3_size": 40,
@@ -743,6 +759,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -914,6 +934,10 @@
         }
       },
       "corner_radius": "square",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -1085,6 +1109,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -1255,6 +1283,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -1426,6 +1458,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 56,
       "h2_size": 48,
       "h3_size": 40,
@@ -1596,6 +1632,10 @@
         }
       },
       "corner_radius": "square",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -1766,6 +1806,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -1937,6 +1981,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 101,
       "h2_size": 64,
       "h3_size": 40,
@@ -2108,6 +2156,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -2279,6 +2331,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -2450,6 +2506,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 101,
       "h2_size": 64,
       "h3_size": 40,
@@ -2621,6 +2681,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 56,
       "h2_size": 48,
       "h3_size": 40,
@@ -2792,6 +2856,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 101,
       "h2_size": 64,
       "h3_size": 40,
@@ -2963,6 +3031,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -3133,6 +3205,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
@@ -3304,6 +3380,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 101,
       "h2_size": 64,
       "h3_size": 40,
@@ -3475,6 +3555,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 48,
       "h3_size": 56,
@@ -3646,6 +3730,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 101,
       "h2_size": 64,
       "h3_size": 40,
@@ -3817,6 +3905,10 @@
         }
       },
       "corner_radius": "fully_round",
+      "font_weight_h1": "800",
+      "font_weight_h2": "800",
+      "font_weight_h3": "800",
+      "font_weight_headers": "700",
       "h1_size": 80,
       "h2_size": 64,
       "h3_size": 56,
